--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h1>ข้อมูลการขายสินค้า</h1>
 </body>
 </html>
